# kscope

./: .gitignore  CMakeLists.txt  README.md  ast.h  codegen.cpp  codegen.h  compiler.cpp  errors.cpp  lexer.cpp  main.cpp  parser.cpp
include/kscope/AST/: ASTNode.h  ASTNodes.def  ASTNodes.h  ASTVisitor.h  ASTree.h  BinaryNode.h  CallNode.h  ForNode.h  FunctionNode.h  IfNode.h  NumberNode.h  PrototypeNode.h  UnaryNode.h  VarNode.h  VariableNode.h
include/kscope/Interop/: Printing.h
include/kscope/Render/: Renderer.h
src/: CMakeLists.txt  ast.cpp  ast.h  codegen.cpp  codegen.h  context.cpp  context.h  errors.cc  errors.h  lexer.cc  lexer.cpp  lexer.h  main.cc  main.cpp  parser.cc  parser.cpp  parser.h  repl.cc
src/Parse/: .gitignore  ASTree.cc  CMakeLists.txt  grammar.yy  lexer.h  lexer.ll
src/Render/IR/: BinaryNode.cc  CMakeLists.txt  CallNode.cc  ForNode.cc  FunctionNode.cc  IRContext.cc  IRContext.h  IRRenderer.cc  IRRenderer.h  IfNode.cc  NumberNode.cc  PrototypeNode.cc  UnaryNode.cc  VarNode.cc  VariableNode.cc
src/Render/IR/Pipeline/: CMakeLists.txt  LazyORCPipeline.cc  LazyORCPipeline.h  ORCPipeline.h  Pipeline.h  SimpleORCPipeline.cc  SimpleORCPipeline.h
src/ast/: ASTNode.h  BinaryNode.h  CMakeLists.txt  CallNode.h  ForNode.h  FunctionNode.h  IfNode.h  NumberNode.h  PrototypeNode.h  UnaryNode.h  VarNode.h  VariableNode.h  ast.h  binary.cc  binary.cpp  binary.h  call.cc  call.cpp  call.h  for.cc  for.cpp  for.h  function.cc  function.cpp  function.h  if.cpp  if.h  node.h  number.cc  number.cpp  number.h  prototype.cc  prototype.cpp  prototype.h  unary.cpp  unary.h  var.cc  var.cpp  var.h  variable.cc  (+2 more)
src/codegen/: CMakeLists.txt  binary.cc  binary.cpp  call.cc  call.cpp  context.cpp  context.h  for.cc  for.cpp  function.cc  function.cpp  if.cc  if.cpp  number.cc  number.cpp  prototype.cc  prototype.cpp  renderer.cc  renderer.h  unary.cc  unary.cpp  var.cc  var.cpp  variable.cc  variable.cpp
src/errors/: Error.h
src/parsing/: ASTree.cc  ASTree.h  CMakeLists.txt  grammar.yy  lexer.cc  lexer.h  tree.cc  tree.h
src/rendering/: RenderSpec.h  Renderer.h
src/rendering/IR/: BinaryNode.cc  CMakeLists.txt  CallNode.cc  ForNode.cc  FunctionNode.cc  IRContext.cc  IRContext.h  IRGenContext.cc  IRGenContext.h  IRRenderContext.cc  IRRenderContext.h  IRRenderSpec.h  IRRenderer.cc  IRRenderer.h  IfNode.cc  JITHelper.cc  JITHelper.h  NumberNode.cc  PrototypeNode.cc  SessionContext.cc  SessionContext.h  UnaryNode.cc  VarNode.cc  VariableNode.cc
src/rendering/IR/ORCPipeline/: CMakeLists.txt  LazyORCPipeline.cc  LazyORCPipeline.h  ORCPipeline.h  SimpleORCPipeline.cc  SimpleORCPipeline.h
src/rendering/IR/ORCPipelines/: FullyLazyORCPipeline.cc  FullyLazyORCPipeline.h  ORCPipeline.h  SimpleORCPipeline.cc  SimpleORCPipeline.h
src/rendering/IR/Pipeline/: LazyORCPipeline.cc  LazyORCPipeline.h  ORCPipeline.h  Pipeline.h  SimpleORCPipeline.cc
src/utils/: EnforceDerived.h
